ensures page works on mobile iphone

--- a/src/less/components.less
+++ b/src/less/components.less
@@ -110,7 +110,7 @@
             margin-top: 6rem;
         }
         &:last-of-type {
-            margin-bottom: 0;
+            margin-bottom: 0.4rem;
         }
 
     }
